# openclaw-wallpaper

./: .gitignore  README.md  architecture.md  index.html  next-iteration-plan.md  package.json  pnpm-lock.yaml  prd.md
public/maps/: office2.json
research/: channel-config-api.md  feasibility-report.md  provider-rpc-api.md  session-management-plan.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hidden_shell.rs  lib.rs  main.rs  mouse_hook.rs  tray.rs
src-tauri/src/commands/: mod.rs  openclaw.rs  wallpaper.rs
src/game/: GameManager.ts
src/game/characters/: AgentManager.ts  AgentSprite.ts
src/game/config/: animations.ts  emotes.ts
src/game/scenes/: BootScene.ts  OfficeScene.ts
src/game/ui/: EmoteBubble.ts  InfoBubble.ts  POIInteraction.ts  StatusBar.ts
src/gateway/: GatewayClient.ts  SessionMapper.ts  index.ts  types.ts
src/hooks/: useWindowLabel.ts
src/pixi/characters/: AgentCharacter.ts  AgentCharacterManager.ts  AnimationStateMachine.ts  PaletteSwap.ts
src/pixi/engine/: PerformanceController.ts  SceneManager.ts
src/pixi/scenes/: TestScene.ts  WorkshopScene.ts
src/pixi/scenes/layers/: BackgroundLayer.ts  BuildingLayer.ts  GroundLayer.ts  SkyLayer.ts  UIOverlayLayer.ts
src/stores/: appStore.ts  gatewayStore.ts
src/styles/: pixel-theme.ts
src/utils/: constants.ts  tauri-ipc.ts
src/windows/main/: AgentInfoPanel.tsx  ChatPanel.tsx  MainWindow.tsx  PixelWindowControls.tsx  SettingsModal.tsx  index.ts
