[package]
name = "openclaw-wallpaper"
version = "0.1.0"
description = "OpenClaw Wallpaper - Stardew Valley style desktop wallpaper for OpenClaw"
authors = ["OpenClaw"]
edition = "2021"

[lib]
name = "openclaw_wallpaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "time"] }
dirs = "6"
